[desktop]: Fix Alignment layout

--- a/desktop/src/styles.scss
+++ b/desktop/src/styles.scss
@@ -191,6 +191,7 @@ i.mdi {
 
     .p-tabview-nav li .p-tabview-nav-link {
         border-color: transparent !important;
+        min-height: 32px;
     }
 }
 
